# clipboard-logger

./: Cargo.toml  README.md
src/: autostart.rs  clip.rs  config.rs  logging.rs  main.rs
wix/: License.rtf  main.wxs
